--- a/views/account/questLogin.pug
+++ b/views/account/questLogin.pug
@@ -9,6 +9,11 @@ html
     .bg-gradient-to-t.from-pink-300.to-yellow-600.flex.items-center.justify-center.min-h-screen
       .bg-pink-500.p-8.rounded-lg.shadow-lg.w-80
         h2.text-2xl.font-bold.mb-6.text-center.text-gray-800 Quest Login
+        // Hiển thị thông báo lỗi nếu có
+        if errors && errors.length > 0
+          .mb-4.text-red-500
+            each error in errors
+              p= error.msg
         form(action='/users/userLogin' method='post')
           .mb-4
             label.block.text-sm.font-medium.text-gray-700.mb-1(for='username') Username:
