--- a/views/account/register.pug
+++ b/views/account/register.pug
@@ -9,6 +9,11 @@ html
     .bg-gradient-to-t.from-pink-300.to-yellow-600.flex.items-center.justify-center.min-h-screen
       .bg-pink-500.p-8.rounded-lg.shadow-lg.w-80
         h2.text-2xl.font-bold.mb-6.text-center.text-gray-800 Register
+        // Hiển thị thông báo lỗi nếu có
+        if errors && errors.length > 0
+          .mb-4.text-red-500
+            each error in errors
+              p= error.msg
         form(action='/users/createRegister' method='post')
           .mb-4
             label.block.text-sm.font-medium.text-gray-700.mb-1(for='username') Username:
@@ -17,4 +22,4 @@ html
             label.block.text-sm.font-medium.text-gray-700.mb-1(for='password') Password:
             input#password.bg-pink-500.w-full.px-3.py-2.border-t-0.border-l-0.border-r-0.border-b-2.border-b-white(type='password' name='password' class='focus:outline-none focus:ring-0 focus:border-b-white')
           button.mt-4.shadow-2xl.w-2xl.bg-purple-800.text-white.py-2.px-4.rounded-md.shadow-lg(type='submit' class='hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-pink-500 focus:ring-offset-2 shadow-pink-500/50') REGISTER
-          a.pl-9.text-gray-700(href='/users/guestlogin') Login
+          a.pl-9.text-gray-700(href='/users/guestlogin') Login          a.pl-9.text-gray-700(href='/users/guestlogin') Login
