--- a/views/account/index.pug
+++ b/views/account/index.pug
@@ -43,6 +43,6 @@ html(lang="en")
   body
     h1 Welcome to the Wonderland Widescreen
     .login-buttons
-      button.btn(onclick="location.href='/users/adminLogin'") Admin Login
+      button.btn(onclick="location.href='/auth/adminlogin'") Admin Login
       button.btn(onclick="location.href='/users/guestlogin'") Guest Login
 
