--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,8 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p Welcome to #{user}
+  //- if user
+  //-   a(href='/users/logout') Logout
+  //- else
+  //-   a(href='/users/guestlogin') Login
